# calculator_project_26_YP

./: .coverage  .gitignore  README.md  pyproject.toml  tuto.md
.env_calculator/: pyvenv.cfg
.env_calculator/Scripts/: activate  activate.bat  get_gprof  get_objgraph  undill
.github/workflows/: main.yml
.package_env/: pyvenv.cfg
.package_env/Scripts/: activate  activate.bat  get_gprof  get_objgraph  undill
src/CALCULATOR_PROJECT_26_YP.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/calculator/: __init__.py  calculator.py  simple_calculator.py
src/calculator.egg-info/: PKG-INFO  SOURCES.txt
src/calculator_project_26_yp.egg-info/: SOURCES.txt  requires.txt
tests/: test_simple_calculator.py
